# resources/model_update_username_data.go
@@ -1,215 +1,0 @@
-/*
-Chains lab profile service
-
-profiles service docs
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateUsernameData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateUsernameData{}
-
-// UpdateUsernameData struct for UpdateUsernameData
-type UpdateUsernameData struct {
-	// user id
-	Id string `json:"id"`
-	Type string `json:"type"`
-	Attributes UpdateUsernameDataAttributes `json:"attributes"`
-}
-
-type _UpdateUsernameData UpdateUsernameData
-
-// NewUpdateUsernameData instantiates a new UpdateUsernameData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateUsernameData(id string, type_ string, attributes UpdateUsernameDataAttributes) *UpdateUsernameData {
-	this := UpdateUsernameData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewUpdateUsernameDataWithDefaults instantiates a new UpdateUsernameData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateUsernameDataWithDefaults() *UpdateUsernameData {
-	this := UpdateUsernameData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *UpdateUsernameData) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *UpdateUsernameData) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *UpdateUsernameData) SetId(v string) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *UpdateUsernameData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *UpdateUsernameData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *UpdateUsernameData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *UpdateUsernameData) GetAttributes() UpdateUsernameDataAttributes {
-	if o == nil {
-		var ret UpdateUsernameDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *UpdateUsernameData) GetAttributesOk() (*UpdateUsernameDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *UpdateUsernameData) SetAttributes(v UpdateUsernameDataAttributes) {
-	o.Attributes = v
-}
-
-func (o UpdateUsernameData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateUsernameData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *UpdateUsernameData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateUsernameData := _UpdateUsernameData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateUsernameData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateUsernameData(varUpdateUsernameData)
-
-	return err
-}
-
-type NullableUpdateUsernameData struct {
-	value *UpdateUsernameData
-	isSet bool
-}
-
-func (v NullableUpdateUsernameData) Get() *UpdateUsernameData {
-	return v.value
-}
-
-func (v *NullableUpdateUsernameData) Set(val *UpdateUsernameData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateUsernameData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateUsernameData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateUsernameData(val *UpdateUsernameData) *NullableUpdateUsernameData {
-	return &NullableUpdateUsernameData{value: val, isSet: true}
-}
-
-func (v NullableUpdateUsernameData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateUsernameData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
