# resources/model_update_username_data_attributes.go
@@ -1,159 +1,0 @@
-/*
-Chains lab profile service
-
-profiles service docs
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateUsernameDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateUsernameDataAttributes{}
-
-// UpdateUsernameDataAttributes struct for UpdateUsernameDataAttributes
-type UpdateUsernameDataAttributes struct {
-	// Username
-	Username string `json:"username"`
-}
-
-type _UpdateUsernameDataAttributes UpdateUsernameDataAttributes
-
-// NewUpdateUsernameDataAttributes instantiates a new UpdateUsernameDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateUsernameDataAttributes(username string) *UpdateUsernameDataAttributes {
-	this := UpdateUsernameDataAttributes{}
-	this.Username = username
-	return &this
-}
-
-// NewUpdateUsernameDataAttributesWithDefaults instantiates a new UpdateUsernameDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateUsernameDataAttributesWithDefaults() *UpdateUsernameDataAttributes {
-	this := UpdateUsernameDataAttributes{}
-	return &this
-}
-
-// GetUsername returns the Username field value
-func (o *UpdateUsernameDataAttributes) GetUsername() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Username
-}
-
-// GetUsernameOk returns a tuple with the Username field value
-// and a boolean to check if the value has been set.
-func (o *UpdateUsernameDataAttributes) GetUsernameOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Username, true
-}
-
-// SetUsername sets field value
-func (o *UpdateUsernameDataAttributes) SetUsername(v string) {
-	o.Username = v
-}
-
-func (o UpdateUsernameDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateUsernameDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["username"] = o.Username
-	return toSerialize, nil
-}
-
-func (o *UpdateUsernameDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"username",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateUsernameDataAttributes := _UpdateUsernameDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateUsernameDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateUsernameDataAttributes(varUpdateUsernameDataAttributes)
-
-	return err
-}
-
-type NullableUpdateUsernameDataAttributes struct {
-	value *UpdateUsernameDataAttributes
-	isSet bool
-}
-
-func (v NullableUpdateUsernameDataAttributes) Get() *UpdateUsernameDataAttributes {
-	return v.value
-}
-
-func (v *NullableUpdateUsernameDataAttributes) Set(val *UpdateUsernameDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateUsernameDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateUsernameDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateUsernameDataAttributes(val *UpdateUsernameDataAttributes) *NullableUpdateUsernameDataAttributes {
-	return &NullableUpdateUsernameDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableUpdateUsernameDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateUsernameDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
